# dometl

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: format_lint_type.yml
dometl/: __init__.py  config.py  db_utils.py  dometl_config.py  etl_runner.py  exceptions.py  settings.py  test.py
dometl_config/: config.yaml  game_to_live.sql  table_1_create.sql  table_1_test_1.sql  table_1_test_2.sql  table_1_to_live.sql  table_2_create.sql  table_game.sql  tables_create.sql  tables_st_create.sql
scripts/: db_create.sql  example_inserts.sql  full_run.sh  st_delete.sql
